@@ -11,6 +11,12 @@ REVISION HISTORY
 ================
 
 ------------------
+2014-12-17
+Edit WriteInit in classes convMxM and convMxN
+クラスconvMxMとconvMxN内のWriteInitの部分において、不等間隔格子の
+座標データが単精度の場合と倍精度の場合の両方に対応できるようにした。
+
+------------------
 2014-12-16
 Edit classes InputParam, convMxM and convMxN to output non-uniform cartesian
  data in VTK format
